# WordleGame

./: .gitignore  CLAUDE.md  CMakeLists.txt  PLAN.md  README.md
assets/data/: words.txt
src/: Board.cpp  Board.hpp  Dictionary.cpp  Dictionary.hpp  Game.cpp  Game.hpp  Tile.cpp  Tile.hpp  main.cpp
